--- a/app/src/main/res/drawable/bottom_border.xml
+++ b/app/src/main/res/drawable/bottom_border.xml
@@ -2,12 +2,12 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="@color/gray"/>
+            <solid android:color="@color/transparent"/>
         </shape>
     </item>
-    <item android:bottom="2dp">
-        <shape android:shape="rectangle">
-            <solid android:color="@color/white"/>
+    <item android:left="-2dp" android:right="-2dp" android:top="-2dp">
+        <shape>
+            <stroke android:width="1dp" android:color="@color/gray"/>
         </shape>
     </item>
 </layer-list>
